# MOV_MetaEdit

./: .travis.yml
Project/GNU/CLI/: AddThisToRoot_CLI_compile.sh  Makefile.am
Project/MSVC2015/CLI/: MOVMetaEdit_CLI.vcxproj  MOVMetaEdit_CLI.vcxproj.filters
Project/MSVC2015/GUI/: MOVMetaEdit_GUI.vcxproj  MOVMetaEdit_GUI.vcxproj.filters
Project/Qt/: movmetaedit-gui.pro
Source/: movedit_main.cpp  movedit_structure.cpp
Source/CLI/: Help.cpp
Source/Common/: AdID.cpp  mp4_Base.cpp  mp4_Base.h  mp4_Base_parsing.cpp  mp4_Handler.cpp  mp4_Handler.h
Source/Common/mp4/: mp4_.cpp  mp4_.h  mp4_mdat.cpp  mp4_moov.cpp  mp4_moov_meta.cpp  mp4_moov_meta_hdlr.cpp  mp4_moov_meta_ilst.cpp  mp4_moov_meta_ilst_xxxx.cpp  mp4_moov_meta_ilst_xxxx_data.cpp  mp4_moov_meta_keys.cpp
Source/GUI/Qt/: core.cpp  core.h  helpdialog.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tablewidget.cpp  tablewidget.h
