AUTOMAKE_OPTIONS = foreign subdir-objects

bin_PROGRAMS = movmetaedit
movmetaedit_SOURCES = \
    ../../../Source/CLI/Help.cpp \
    ../../../Source/Common/AdID.cpp \
    ../../../Source/movedit_structure.cpp \
    ../../../Source/movedit_atomread.cpp \
    ../../../Source/movedit_main.cpp

AM_CPPFLAGS = -std=c++0x -I../../../Source -I../../../../ZenLib/Source
